Fix attempt for rekt mobile menu on iOS

--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -9491,7 +9491,7 @@ header .top-menu .logged-out-header-search .catalogue-button em{
 	
 }
 header .main-logo{
-	margin: 10px 20px 0px 0;
+	margin: 10px 0 0px 0;
 }
 header .top-menu .logged-out-header-search{
 	margin: 25px 0;
